<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_gateway_px4</name>
  <version>0.0.0</version>
  <description>PX4 plugin for the Vehicle Gateway</description>
  <maintainer email="morgan@openrobotics.org">Morgan Quigley</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>vehicle_gateway</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>tf2</depend>
  <depend>zenohc</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
