<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_gateway_worlds</name>
  <version>0.0.0</version>
  <description>Provides drone worlds</description>
  <maintainer email="alejandro@openrobotics.com">Alejandro Hernandez Cordero</maintainer>
  <license>Apache License 2.0</license>

  <author>Alejandro Hernandez Cordero</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
